--- a/package.json
+++ b/package.json
@@ -9,17 +9,48 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.7",
+    "@mui/material": "^5.14.7",
+    "@mui/x-date-pickers": "^6.11.0",
+    "@spotify/web-api-ts-sdk": "^1.1.2",
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@xata.io/client": "^0.25.1",
+    "argon2": "^0.31.0",
     "autoprefixer": "10.4.14",
+    "easings.scss": "^1.0.0",
+    "email-validator": "^2.0.4",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "genius-lyrics": "^4.4.6",
+    "gsap": "^3.12.2",
+    "hashids": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "locomotive-scroll": "^4.1.4",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "13.4.12",
+    "next-locomotive-scroll": "^2.3.2",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-lottie-player": "^1.5.4",
+    "react-use": "^17.4.0",
+    "sass": "^1.64.2",
+    "sharp": "^0.32.6",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "youtube-search": "^1.1.6",
+    "ytdl-core": "^4.11.5",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/locomotive-scroll": "^4.1.0",
+    "@types/lodash": "^4.14.196",
+    "tailwindcss-easing": "^0.2.1"
   }
 }
