--- a/package.json
+++ b/package.json
@@ -11,20 +11,24 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@korusbyanthm/kxlrc": "^1.6.0",
     "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.14.7",
     "@mui/x-date-pickers": "^6.11.0",
     "@spotify/web-api-ts-sdk": "^1.1.2",
+    "@studio-freight/react-lenis": "^0.0.38",
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "@xata.io/client": "^0.25.1",
     "argon2": "^0.31.0",
     "autoprefixer": "10.4.14",
+    "classnames": "^2.3.2",
     "easings.scss": "^1.0.0",
     "email-validator": "^2.0.4",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "filter-obj": "^5.1.0",
     "genius-lyrics": "^4.4.6",
     "gsap": "^3.12.2",
     "hashids": "^2.3.0",
@@ -41,6 +45,7 @@
     "react-use": "^17.4.0",
     "sass": "^1.64.2",
     "sharp": "^0.32.6",
+    "tailwind-merge": "^2.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "youtube-search": "^1.1.6",
